--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings:DefaultConnection": "Server=192.168.4.188;Database=TaskManager;Port=5432;User Id=postgres;Password=Password1",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
